# Home_work_django_24

./: .coveragerc  Dockerfile  README.md  docker-compose.yaml  env.sample  lms.json  pyproject.toml  test.txt  user.json
config/: settings.py  urls.py
fixtures/: payments.json
lms/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: admin.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_payment_link_payments_session_id.py
