[tool.poetry]
name = "home-work-django-24"
version = "0.1.0"
description = ""
authors = ["Aleksandr <zemacohoznik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
black = "^24.10.0"
django-phonenumber-field = "^8.0.0"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.4"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
stripe = "^11.2.0"
python-dotenv = "^1.0.1"
forex-python = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
